# PollsApp

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
